FEAT:  사용자 메인페이지, 검색, 즐겨찾기, 및 가게 페이지에서 필요한 기능 추가